Fix lazy loading on Safari (#16)

--- a/src/app/Slide.module.css
+++ b/src/app/Slide.module.css
@@ -14,14 +14,10 @@
   touch-action: pan-x;
   transform: translate(0, 0) scale(1);
   transform-origin: 0 0;
-  will-change: transform;
 }
 
 .image {
-  /* @supports (object-fit: contain) { */
   width: 100%;
   height: 100%;
   object-fit: contain;
-
-  /* } */
 }
